--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,12 @@
 #avatar-dj {
   border: "2px solid #69F2EB" !important;
 }
-
+.no-asterisk::after {
+  content: none;
+}
+.chakra-form__required-indicator {
+  display: none !important;
+}
 .reviewspacing {
   right: 10px;
   top: 10px;
