--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,4 @@
+/* stylelint-disable */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.avatar-excess span {
-  background: linear-gradient(
-    135deg,
-    #e72b91ff,
-    #e2279cff,
-    #de22a6ff,
-    #d91eb1ff,
-    #d51abcff,
-    #d015c6ff,
-    #cc11d1ff,
-    #c70ddcff,
-    #c308e6ff,
-    #be04f1ff
-  );
-  color: white;
-  border: solid 2px white;
-  font-size: 18px;
-  font-weight: 700;
-}
-#avatar-dj {
-  border: "2px solid #69F2EB" !important;
-}
-.no-asterisk::after {
-  content: none;
-}
-.chakra-form__required-indicator {
-  display: none !important;
-}
-.reviewspacing {
-  right: 10px;
-  top: 10px;
-  font-size: 12px;
-  column-gap: 4px;
-  line-height: 1em;
-}
